<resources>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_back">Back</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_exit">Exit</string>
    <string name="action_continue">Continue</string>
    <string name="action_exit_menu">Close Menu</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Preferences</string>
    <string name="action_terms">Terms Of Use</string>
    <string name="action_create">New</string>
    <string name="action_report">Report</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save as</string>
    <string name="action_delete_path">Cancel path</string>
    <string name="action_delete_all_comment">Erase all comments</string>
    <string name="action_close_audit">Close Audit</string>
    <string name="action_export_audit_docx">Generate Report</string>
    <string name="action_update">Edit</string>
    <string name="action_remove">Delete</string>
    <string name="action_lock">Lock</string>
    <string name="action_close">Close</string>
    <string name="action_sort">Sort</string>
    <string name="action_comment">Comments</string>
    <string name="action_rules">Rules</string>
    <string name="action_complete">Complete</string>
    <string name="action_ruleset">Display Rules</string>
    <string name="title_context">Path objects Menu</string>
    <string name="action_object_definition">View Definition</string>
    <string name="action_object_remove">Delete from path</string>
    <string name="action_object_update">Rename</string>
    <string name="action_object_comment">Add a comment</string>
    <string name="action_object_characteristics">Edit characteristics</string>
    <string name="action_object_detail">Detail</string>
    <string name="action_object_grid_detail">Detail</string>
    <string name="action_object_add">Add a path</string>
    <string name="action_object_ruleset">View rules</string>
    <string name="action_text_comment">Text</string>
    <string name="action_audio_comment">Audio</string>
    <string name="action_photo_comment">Photo</string>
    <string name="action_file_comment">File</string>
    <string name="action_complete_record">Complete the path</string>
    <string name="action_retest">Test Again</string>
    <string name="author_label">Author</string>
    <string name="name_label">Name</string>
    <string name="publication_date_label">Publication date</string>
    <string name="version_label">Version number</string>
    <string name="rule_category_label">Rule\'s equipmentCategory</string>
    <string name="comment_label">Comment</string>
    <string name="associated_objects_label">Associated objects</string>
    <string name="info_retest">Characteristics are modified.\n"Test Again" enables to reiterate object accessibility test.</string>
    <string name="response_ok_button">Yes</string>
    <string name="response_nok_button">No</string>
    <string name="response_notapplicable_button">N/A</string>
    <string name="response_no_answer_button">Doubt</string>
    <string name="error_missing_permission">You need to accept the permissions to use this app</string>
    <string name="exit_dialog_title">Exit Application</string>
    <string name="exit_dialog_message">You will quit application</string>
    <string name="navigation_menu_open">Menu open</string>
    <string name="navigation_menu_close">Menu close</string>
    <string name="navigation_item_new_audit">New Audit</string>
    <string name="navigation_item_list_audit">All Audits</string>
    <string name="navigation_item_show_ruleset">View referential</string>
    <string name="navigation_item_show_help">Help</string>
    <string name="about_title">About</string>
    <string name="about_version" formatted="false">Version: %s</string>
    <string name="about_label_site">OCARA is born in Meylan (France) at the Orange research laboratory</string>
    <string name="about_text_1"><b>OCARA</b>, Outil de Contrôle et d’Analyse du Réel Accessible (Real word Auditing Tool), is an auditing tool for buildings accessibility. User define the path, and can check accessibility rules taking into account several kinds of impairment.</string>
    <string name="about_text_2">OCARA is a complete auditing tool that can address several sets of rules, that can be personalized. It enables to test objects, paths and areas.</string>
    <string name="about_text_3">OCARA was developed by Orange Labs, for Orange Disability Human Resources Mission and for Real Property Branch. Accessibility rules are based upon several legible documents and from employees needs. Other new sets can be added, <b>your owns</b> sets.</string>
    <string name="about_text_4">Orange decided to go open-source with OCARA in order to offer to every company or association the ability to check accessibility and to provide design for all, and to improve this software.</string>
    <string name="about_text_5">Accessibility is a well known subject that has to be taken into account in each company at least in the frame of Social responsibility. This is a mainframe for well being at work.</string>
    <string name="about_text_6">Sharing through open source is the best way to go further.</string>
    <string name="about_label_site__OpenSource">OCARA is born in Meylan (France) at the Orange research laboratory. It was initiated by Denis Ch�ne and performed by Gilles Zanolin.</string>
    <string name="about_mailTo_OpenSource"><b>contact : ocara.support@orange.com</b></string>
    <string name="setting_test_title">When path objects have to be tested</string>
    <string name="setting_test_dialog_title">When objects have to be tested</string>
    <string name="setting_display_auditing_progress_title">Display audit progression</string>
    <string name="setting_display_auditing_progress_dialog_title">Audit progress</string>
    <string name="action_sort_by_status">by answer</string>
    <string name="action_sort_by_site">by site</string>
    <string name="action_sort_by_date">by date</string>
    <string name="create_site_title">Input hereafter data about your site:</string>
    <string name="create_site_code_hint"><i>Input code site</i></string>
    <string name="create_site_name_hint"><i>Input site name</i></string>
    <string name="create_site_street_hint"><i>Input street name</i></string>
    <string name="create_site_postal_code_hint"><i>Input postal code</i></string>
    <string name="create_site_city_hint"><i>Input town name</i></string>
    <string name="create_site_create_site_button">Create</string>
    <string name="ruleset_info_title">Referential Information</string>
    <string name="setting_when_test_entries_key">setting_when_test_entries_key</string>
    <string name="setting_display_auditing_progress_key">setting_display_auditing_progress_key</string>
    <string name="show_rules">Show rules</string>
    <string name="download_rules">Download</string>
</resources>