<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Software Name: OCARA
  ~
  ~ SPDX-FileCopyrightText: Copyright (c) 2015-2020 Orange
  ~ SPDX-License-Identifier: MPL v2.0
  ~
  ~ This software is distributed under the Mozilla Public License v. 2.0,
  ~ the text of which is available at http://mozilla.org/MPL/2.0/ or
  ~ see the "license.txt" file for more details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_object_remove"
        android:title="@string/action_object_remove" />
    <item
        android:id="@+id/action_object_update"
        android:title="@string/action_object_update" />
    <item
        android:id="@+id/action_object_comment"
        android:title="@string/action_object_comment" />
    <item
        android:id="@+id/action_object_characteristics"
        android:title="@string/action_object_characteristics" />
    <item
        android:id="@+id/action_object_detail"
        android:title="@string/action_object_detail" />

</menu>