<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Software Name: OCARA
  ~
  ~ SPDX-FileCopyrightText: Copyright (c) 2015-2020 Orange
  ~ SPDX-License-Identifier: MPL v2.0
  ~
  ~ This software is distributed under the Mozilla Public License v. 2.0,
  ~ the text of which is available at http://mozilla.org/MPL/2.0/ or
  ~ see the "license.txt" file for more details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_comment_text"
        android:icon="@drawable/ic_text"
        android:title="@string/action_text_comment"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_comment_audio"
        android:icon="@drawable/ic_microphone"
        android:title="@string/action_audio_comment"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_comment_photo"
        android:icon="@drawable/ic_camera"
        android:title="@string/action_photo_comment"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_comment_file"
        android:icon="@drawable/ic_attachment"
        android:title="@string/action_file_comment"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/delete_all_comments"
        android:title="@string/action_delete_all_comment"
        app:showAsAction="never" />
</menu>
