<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Software Name: OCARA
  ~
  ~ SPDX-FileCopyrightText: Copyright (c) 2015-2020 Orange
  ~ SPDX-License-Identifier: MPL v2.0
  ~
  ~ This software is distributed under the Mozilla Public License v. 2.0,
  ~ the text of which is available at http://mozilla.org/MPL/2.0/ or
  ~ see the "license.txt" file for more details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_desc"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom|withText">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_by_status"
                    android:title="@string/action_sort_by_status"></item>
                <item
                    android:id="@+id/sort_by_site"
                    android:title="@string/action_sort_by_site"></item>
                <item
                    android:id="@+id/sort_by_date"
                    android:title="@string/action_sort_by_date"></item>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/add_audit"
        android:icon="@drawable/ic_new"
        android:title="@string/action_create"
        app:showAsAction="ifRoom|withText" />

</menu>