<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Software Name: OCARA
  ~
  ~ SPDX-FileCopyrightText: Copyright (c) 2015-2020 Orange
  ~ SPDX-License-Identifier: MPL v2.0
  ~
  ~ This software is distributed under the Mozilla Public License v. 2.0,
  ~ the text of which is available at http://mozilla.org/MPL/2.0/ or
  ~ see the "license.txt" file for more details.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/createSiteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/editAuditPaddingBottom"
        android:paddingLeft="@dimen/editAuditPaddingLeft"
        android:paddingRight="@dimen/editAuditPaddingRight"
        android:paddingTop="@dimen/editAuditPaddingTop">

        <TextView
            style="@style/MainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/create_site_title" />

        <EditText
            android:id="@+id/site_noimmo"
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            android:layout_marginTop="@dimen/editAuditTitleMarginTop"
            android:hint="@string/create_site_code_hint"
            android:singleLine="true" />

        <EditText
            android:id="@+id/site_name"
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            android:layout_marginTop="@dimen/editAuditTitleMarginTop"
            android:hint="@string/create_site_name_hint"
            android:singleLine="true" />

        <EditText
            android:id="@+id/site_street"
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            android:layout_marginTop="@dimen/editAuditTitleMarginTop"
            android:hint="@string/create_site_street_hint"
            android:singleLine="true" />

        <EditText
            android:id="@+id/site_postal_code"
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            android:layout_marginTop="@dimen/editAuditTitleMarginTop"
            android:hint="@string/create_site_postal_code_hint"
            android:singleLine="true" />

        <EditText
            android:id="@+id/site_city"
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            android:layout_marginTop="@dimen/editAuditTitleMarginTop"
            android:hint="@string/create_site_city_hint"
            android:singleLine="true" />


        <Button
            android:id="@+id/create_site_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/editAuditStartButtonMarginTop"
            android:enabled="false"
            android:text="@string/create_site_create_site_button" />

    </LinearLayout>
</ScrollView>