<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Software Name: OCARA
  ~
  ~ SPDX-FileCopyrightText: Copyright (c) 2015-2020 Orange
  ~ SPDX-License-Identifier: MPL v2.0
  ~
  ~ This software is distributed under the Mozilla Public License v. 2.0,
  ~ the text of which is available at http://mozilla.org/MPL/2.0/ or
  ~ see the "license.txt" file for more details.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/response_ok_button"
        style="@style/ResponseButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/response_ok_background"
        android:text="@string/response_ok_button" />

    <TextView
        android:id="@+id/response_no_answer_button"
        style="@style/ResponseButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/responseButtonMargin"
        android:layout_weight="1"
        android:background="@drawable/response_no_answer_background"
        android:text="@string/response_no_answer_button" />

    <TextView
        android:id="@+id/response_nok_button"
        style="@style/ResponseButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/responseButtonMargin"
        android:layout_weight="1"
        android:background="@drawable/response_nok_background"
        android:text="@string/response_nok_button" />

    <TextView
        android:id="@+id/response_notapplicable_button"
        style="@style/ResponseButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/responseButtonMargin"
        android:layout_weight="1"
        android:background="@drawable/response_notapplicable_background"
        android:text="@string/response_notapplicable_button"
        android:visibility="gone" />

</LinearLayout>
